--- a/report/POOOOO.tex
+++ b/report/POOOOO.tex
@@ -28,3 +28,28 @@ A interface ObjectRecord representa uma entidade constituída por varias recorde
  \item Ser comparado com outro ObjectRecord para um determinado Record, e saber qual é o melhor.
  \item Representar este ObjectRecord para um determinado Record sobe a forma de String.
 \end{itemize}
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%    %%%%%%%%%%%%%%%%%%  MANANGERRRRR
+
+\section{DataSet}
+\label{sec:manager}
+A class Dataset é o conjunto de toda a informação do referente à aplicação criada, contendo um conjunto de utilizadores e outro de eventos. Esta informação é acedida através da class manager.
+
+
+
+\section{Encapsulamento: Manager}
+\label{sec:manager}
+A class Manager foi criada para facilitar o encapsulamento de Map's ou Set's, e realiza as operações básicas de gestão (na adição faz um clone, na pesquisa retornar um clone)
+
+Quando se instância a class Manager, passa-se a estrutura que pretendemos encapsular, a partir dai esta estrutura nunca mais pode ser acedida. Portanto caso seja necessária para outra algum método especifico da estrutura, antes de instanciar deverá ser guardada.
+
+Assim torna-se suficiente retornar o Manager para que o exterior consiga aceder de forma encapsulada à informação.
+
+Para poder utilizar um Manager de Map's os objetos devem implementar a interface ObjectKey. O valor retornado por essa função será a Key do objecto no map.
+
