--- a/report/relatorio-POO-CamposinhosOliveiraSantos.tex
+++ b/report/relatorio-POO-CamposinhosOliveiraSantos.tex
@@ -195,7 +195,7 @@ Todos os métodos foram implementados como \verb!static!.
 A figura \ref{fig:manager} apresenta o diagrama de classes relativo ao \emph{Manager}.
 
 A classe Manager foi criada para facilitar o encapsulamento de tipos \verb!Map! ou \verb!Set!, e realiza as operações básicas de gestão 
-(na adição faz um clone, na pesquisa retornar um clone).
+(na adição faz um clone, na pesquisa retorna um clone).
 
 Quando se instância a classe \emph{Manager}, passa-se a estrutura que pretendemos encapsular, a partir daí esta estrutura nunca mais 
 pode ser acedida. Assim, caso seja necessária aceder a algum método especifico da estrutura, antes de esta ser instanciada deverá ser guardada.
@@ -369,6 +369,9 @@ os métodos de acesso aos \verb!Records! do objecto funcionam da seguinte forma:
  \item Se o recorde estiver definido naquela Actividade encontrou e pára;
  \item Caso contrario pesquisa no nível seguinte
 \end{itemize}
+
+Para além do conteúdo da presente secção, poderá ser consultada documentação específica dos \verb!Records! no seguinte endereço:
+\url{../src/doc/index.html}.
 
 \subsection{Record interface}
 \label{subsec:record}
